--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -368,7 +368,7 @@ TODO: if there is time, we should put a more complex data science type example, 
 
   We have found that it is possible to write many useful machine learning models as Quipp programs and then use generic algorithms for inference.  Furthermore, performance is <???>.  This should make it much easier for non-experts to write useful machine learning models.
   
-  In the future, it will be useful to support unbounded recursion in models (as in Church).  Furthermore, it will also be useful to expand the set of types supported.  It is possible to define reasonable default distributions for non-recursive algebraic data types, and it may also be possible to define them for recursive algebraic data types using catamorphisms.
+  In the future, it will be useful to support unbounded recursion in models (as in Church).  Furthermore, it will also be useful to expand the set of types supported.  It is possible to define reasonable default distributions for non-recursive algebraic data types, and it may also be possible to define them for recursive algebraic data types using catamorphisms.  Also, it will be useful to create a more usable interface to infer parameters and perform additional data pracessing given these parameters.
 
 
 \end{document}
